--- a/pom.xml
+++ b/pom.xml
@@ -632,9 +632,9 @@
                 <module>compatibility-client-compiled</module>
                 <module>compatibility-shared</module>
                 <module>compatibility-themes</module>
-                <module>testbench-api</module>
                 <!-- Nexus staging bug needs the last module to be deployed. -->
-                <module>bom</module>
+                <module>testbench-api</module>
+                <!-- BOM is built and released separately -->
             </modules>
 
             <build>
