--- a/test/pom.xml
+++ b/test/pom.xml
@@ -64,6 +64,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.0.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Project modules -->
