--- a/pom.xml
+++ b/pom.xml
@@ -235,7 +235,7 @@
             <dependency>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-testbench</artifactId>
-                <version>5.0.0.alpha2</version>
+                <version>5.0.0.beta5</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
