--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -17,7 +17,7 @@
 
     <properties>
         <vaadin.spring.version>2.0.0.rc1</vaadin.spring.version>
-        <vaadin.testbench.version>5.0.0.alpha2</vaadin.testbench.version>
+        <vaadin.testbench.version>5.0.0.beta5</vaadin.testbench.version>
         <vaadin.cdi.version>2.0.0.rc1</vaadin.cdi.version>
     </properties>
 
