--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,9 @@
         <sonar.analysis.mode>preview</sonar.analysis.mode>
         <sonar.issuesReport.console.enable>true</sonar.issuesReport.console.enable>
         <sonar.issuesReport.html.enable>true</sonar.issuesReport.html.enable>
+
         <vaadin.icons.version>3.0.0</vaadin.icons.version>
+        <vaadin.testbench.version>5.0.0.beta5</vaadin.testbench.version>
     </properties>
 
     <!-- TODO: remove this after maven plugin has been released -->
@@ -235,7 +237,7 @@
             <dependency>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-testbench</artifactId>
-                <version>5.0.0.beta5</version>
+                <version>${vaadin.testbench.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
