Fix creation of vaadin-all javadoc in release builds

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -255,7 +255,7 @@
 
     <profiles>
         <profile>
-            <id>release</id>
+            <id>release-assemblies</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
