--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -16,9 +16,10 @@
     <url>http://vaadin.com</url>
 
     <properties>
-        <vaadin.spring.version>2.0.0.rc1</vaadin.spring.version>
-        <vaadin.testbench.version>5.0.0.beta5</vaadin.testbench.version>
-        <vaadin.cdi.version>2.0.0.rc1</vaadin.cdi.version>
+        <vaadin.spring.version>2.0.0</vaadin.spring.version>
+        <vaadin.testbench.version>5.0.0</vaadin.testbench.version>
+        <vaadin.cdi.version>2.0.0</vaadin.cdi.version>
+        <vaadin.context-menu.version>2.0.0</vaadin.context-menu.version>
     </properties>
 
     <repositories>
@@ -121,6 +122,11 @@
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-cdi</artifactId>
                 <version>${vaadin.cdi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-context-menu</artifactId>
+                <version>${vaadin.context-menu.version}</version>
             </dependency>
 
         </dependencies>
