Some cleanup to themes module (#8526)

--- a/themes/pom.xml
+++ b/themes/pom.xml
@@ -32,12 +32,14 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-sass-compiler</artifactId>
+            <version>${vaadin.sass.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-icons</artifactId>
+            <version>${vaadin.icons.version}</version>
             <scope>provided</scope>
         </dependency>
 
