Commit to test TestbenchElement showTooltip change

--- a/uitest/pom.xml
+++ b/uitest/pom.xml
@@ -25,6 +25,11 @@
             <id>vaadin-addons</id>
             <url>http://maven.vaadin.com/vaadin-addons</url>
         </repository>
+        <repository>
+            <id>vaadin-snapshots</id>
+            <name>Vaadin snapshot repository</name>
+            <url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
+        </repository>
     </repositories>
 
     <prerequisites>
