--- a/server/pom.xml
+++ b/server/pom.xml
@@ -20,6 +20,14 @@
         <!-- Liferay Portal Service -->
         <dependency>
             <groupId>com.liferay.portal</groupId>
+            <artifactId>com.liferay.portal.kernel</artifactId>
+            <version>${liferay.portal-kernel.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Liferay 6 -->
+        <dependency>
+            <groupId>com.liferay.portal</groupId>
             <artifactId>portal-service</artifactId>
             <version>${liferay.portal-service.version}</version>
             <scope>provided</scope>
@@ -83,6 +91,17 @@
             <groupId>com.googlecode.gentyref</groupId>
             <artifactId>gentyref</artifactId>
             <version>1.2.0</version>
+        </dependency>
+
+        <!-- OSGi API -->
+
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.cmpn</artifactId>
         </dependency>
 
         <!-- TESTING DEPENDENCIES -->
@@ -225,46 +244,10 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Bundle-RequiredExecutionEnvironment>${osgi.execution.environment}</Bundle-RequiredExecutionEnvironment>
-                        <Bundle-Version>${osgi.bundle.version}</Bundle-Version>
-                        <Export-Package>VAADIN;version="${osgi.bundle.version}",com.vaadin.*;version="${osgi.bundle.version}"</Export-Package>
-                        <!-- Note that Liferay 6 does not use OSGi, and the dependency is optional for non-Liferay deployments -->
-                        <Import-Package>javax.servlet;version="${osgi.javax.servlet.version}",
-                            javax.servlet.http;version="${osgi.javax.servlet.version}",
-                            javax.validation;version="${javax.validation.version}";resolution:=optional,
-                            org.jsoup;version="${jsoup.version}",
-                            org.jsoup.parser;version="${jsoup.version}",
-                            org.jsoup.nodes;version="${jsoup.version}",
-                            org.jsoup.helper;version="${jsoup.version}",
-                            org.jsoup.safety;version="${jsoup.version}",
-                            org.jsoup.select;version="${jsoup.version}",
-                            javax.portlet;version="[${javax.portlet.version},3)";resolution:=optional,
-                            javax.portlet.filter;version="[${javax.portlet.version},3)";resolution:=optional,
-                            com.liferay.portal.kernel.util;version="[7,8)";resolution:=optional</Import-Package>
-                        <Require-Bundle>
-                            com.vaadin.shared;bundle-version="${osgi.bundle.version}",
-                            com.vaadin.push;bundle-version="${osgi.bundle.version}";resolution:=optional,
-                            com.vaadin.sass-compiler;bundle-version="${vaadin.sass.version}";resolution:=optional</Require-Bundle>
-                    </instructions>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>bundle-manifest</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>manifest</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>biz.aQute.bnd</groupId>
+                <artifactId>bnd-maven-plugin</artifactId>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -277,7 +260,7 @@
                         </manifest>
                     </archive>
                 </configuration>
-                <!-- Package src/test into a jar so that compatbility-server 
+                <!-- Package src/test into a jar so that compatbility-server
                     can use the same test classes, e.g. test beans -->
                 <executions>
                     <execution>
@@ -293,7 +276,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
         </plugins>
-        
+
         <pluginManagement>
             <plugins>
                 <!-- Make Eclipse add the source folder -->
@@ -334,5 +317,5 @@
             </plugins>
         </pluginManagement>
     </build>
-    
+
 </project>
