--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
         <!-- Used version numbers for dependencies -->
         <liferay.portal-service.version>6.2.5</liferay.portal-service.version>
+        <liferay.portal-kernel.version>2.0.0</liferay.portal-kernel.version>
 
         <vaadin.gwt.version>2.8.0</vaadin.gwt.version>
         <vaadin.plugin.version>8.0-SNAPSHOT</vaadin.plugin.version>
@@ -37,14 +38,18 @@
         <atmosphere.runtime.version>2.4.5.vaadin2</atmosphere.runtime.version>
 
         <!-- OSGi -->
-        <osgi.javax.servlet.version>3.0.0</osgi.javax.servlet.version>
         <osgi.execution.environment>JavaSE-1.8</osgi.execution.environment>
         <osgi.bundle.version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}</osgi.bundle.version>
-
+        <osgi.version>6.0.0</osgi.version>
+        <osgi.annotation.version>6.0.1</osgi.annotation.version>
+        
+        <bnd.version>3.3.0</bnd.version>
+        
         <!-- Dependency unpack directory -->
         <dependency.unpack.directory>${project.build.directory}/dependency-unpack</dependency.unpack.directory>
 
-        <!-- Cannot use 9.3 or 9.4 because they sometimes reset the connection too early in case of errors -->
+        <!-- Cannot use 9.3 or 9.4 because they sometimes reset the connection 
+            too early in case of errors -->
         <!-- See e.g. https://issues.apache.org/jira/browse/SOLR-8453 -->
         <jetty.version>9.2.9.v20150224</jetty.version>
         <phantomjs.version>2.1.1</phantomjs.version>
@@ -290,6 +295,25 @@
                 <version>${vaadin.icons.version}</version>
                 <scope>provided</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>osgi.core</artifactId>
+                <version>${osgi.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>osgi.annotation</artifactId>
+                <version>${osgi.annotation.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.osgi</groupId>
+                <artifactId>osgi.cmpn</artifactId>
+                <version>${osgi.version}</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -376,9 +400,16 @@
                     <version>1.8</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.apache.felix</groupId>
-                    <artifactId>maven-bundle-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <groupId>biz.aQute.bnd</groupId>
+                    <artifactId>bnd-maven-plugin</artifactId>
+                    <version>${bnd.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>bnd-process</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
