Add static resource support #8827 #8828 #8829
Add mechanism to support publishing static resources and publish
framework themes and widgetsets

--- a/push/pom.xml
+++ b/push/pom.xml
@@ -29,7 +29,20 @@
             <type>war</type>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>vaadin-shared</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>osgi.cmpn</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
