--- a/pom.xml
+++ b/pom.xml
@@ -619,6 +619,7 @@
                 <module>liferay</module>
                 <module>all</module>
                 <module>compatibility-server</module>
+                <module>compatibility-server-gae</module>
                 <module>compatibility-client</module>
                 <module>compatibility-client-compiled</module>
                 <module>compatibility-shared</module>
@@ -661,6 +662,7 @@
                 <module>client-compiled</module>
                 <module>themes</module>
                 <module>compatibility-server</module>
+                <module>compatibility-server-gae</module>
                 <module>compatibility-client</module>
                 <module>compatibility-client-compiled</module>
                 <module>compatibility-shared</module>
@@ -725,6 +727,7 @@
                 <module>client-compiled</module>
                 <module>themes</module>
                 <module>compatibility-server</module>
+                <module>compatibility-server-gae</module>
                 <module>compatibility-client</module>
                 <module>compatibility-client-compiled</module>
                 <module>compatibility-shared</module>
@@ -789,6 +792,7 @@
                 <module>client-compiled</module>
                 <module>themes</module>
                 <module>compatibility-server</module>
+                <module>compatibility-server-gae</module>
                 <module>compatibility-client</module>
                 <module>compatibility-client-compiled</module>
                 <module>compatibility-shared</module>
@@ -847,6 +851,7 @@
                 <module>push</module>
                 <module>client</module>
                 <module>compatibility-server</module>
+                <module>compatibility-server-gae</module>
                 <module>compatibility-client</module>
                 <module>client-compiler</module>
                 <module>shared</module>
