--- a/pom.xml
+++ b/pom.xml
@@ -619,6 +619,7 @@
                 <module>uitest</module>
                 <module>liferay</module>
                 <module>liferay-integration</module>
+                <module>osgi-integration</module>
                 <module>all</module>
                 <module>compatibility-server</module>
                 <module>compatibility-server-gae</module>
@@ -670,6 +671,7 @@
                 <module>compatibility-shared</module>
                 <module>compatibility-themes</module>
                 <module>liferay-integration</module>
+                <module>osgi-integration</module>
                 <!-- Nexus staging bug needs the last module to be deployed. -->
                 <module>testbench-api</module>
                 <!-- BOM is built and released separately -->
@@ -736,6 +738,7 @@
                 <module>compatibility-shared</module>
                 <module>compatibility-themes</module>
                 <module>liferay-integration</module>
+                <module>osgi-integration</module>
                 <!-- Nexus staging bug needs the last module to be deployed. -->
                 <module>testbench-api</module>
                 <!-- BOM is built and released separately -->
@@ -802,6 +805,7 @@
                 <module>compatibility-shared</module>
                 <module>compatibility-themes</module>
                 <module>liferay-integration</module>
+                <module>osgi-integration</module>
                 <module>testbench-api</module>
                 <module>bom</module>
             </modules>
@@ -862,6 +866,7 @@
                 <module>shared</module>
                 <module>compatibility-shared</module>
                 <module>liferay-integration</module>
+                <module>osgi-integration</module>
             </modules>
             <repositories>
                 <repository>
