Fix dependency issues that cause the server bundle to be built incorrectly

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -88,9 +88,9 @@
 
         <!-- Small reflection library -->
         <dependency>
-            <groupId>com.googlecode.gentyref</groupId>
+            <groupId>com.vaadin.external</groupId>
             <artifactId>gentyref</artifactId>
-            <version>1.2.0</version>
+            <version>1.2.0.vaadin1</version>
         </dependency>
 
         <!-- OSGi API -->
