Add some javadoc for Liferay integration module
Indicate that the classes are only for Liferay 7+, clarify annotation
parameters and update module description.

--- a/liferay-integration/pom.xml
+++ b/liferay-integration/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>vaadin-liferay-integration</artifactId>
     <packaging>jar</packaging>
     <url>https://vaadin.com/</url>
-    <description>Liferay integration</description>
+    <description>Liferay 7+ OSGi portlet support</description>
 
     <parent>
         <groupId>com.vaadin</groupId>
