--- a/test/pom.xml
+++ b/test/pom.xml
@@ -107,6 +107,8 @@
         <module>servlet-containers/jsp-integration</module>
         <module>bean-api-validation</module>
         <module>bean-impl-validation</module>
+        <module>dependency-rewrite-addon</module>
+        <module>dependency-rewrite</module>
     </modules>
 
     <build>
